# counter-strike-grupo-8

./: .commitlintrc.yaml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  et --hard HEAD~1  mise.toml  taller_client  taller_editor  taller_server  taller_tests
.github/workflows/: ci.yaml
assets/: .goutputstream-WLDR82  Readme.txt  black_square.xcf  black_squarexcf.xcf
assets/gfx/: gunshot.xcf  knife_slash.xcf
assets/tile_sheets/: aztec.yaml  dust.yaml
client/: CMakeLists.txt  client.cpp  client.h  client_game_state.h  connection_handler.cpp  connection_handler.h  display.cpp  display.h  errors.h  game_config.h  input.cpp  input.h  lobby_display.h  main.cpp  protocol.cpp  protocol.h  qt_display.cpp  qt_display.h  receiver.cpp  receiver.h  requests.h  response.h  sdl_display.cpp  sdl_display.h  sdl_input.cpp  sdl_input.h  sender.cpp  sender.h  sound_manager.cpp  sound_manager.h  state_update.h  text_display.cpp  text_display.h  text_input.cpp  text_input.h
client/gui/: CMakeLists.txt
client/gui/controllers/: CMakeLists.txt  keyboardhandler.cpp  keyboardhandler.h  mousehandler.cpp  mousehandler.h
client/gui/hud_component/: BitmapFontNumber.cpp  BitmapFontNumber.h  CMakeLists.txt  bit_map_font_number.cpp  bit_map_font_number.h  end_round_display.cpp  end_round_display.h  hud_chat.cpp  hud_chat.h  hud_controls.cpp  hud_controls.h  hud_display.cpp  hud_display.h  hud_health.cpp  hud_health.h  hud_money.cpp  hud_money.h  hud_pointer.cpp  hud_pointer.h  hud_scores.cpp  hud_scores.h  hud_timer.cpp  hud_timer.h  hud_weapons.cpp  hud_weapons.h
client/gui/map_view/: CMakeLists.txt  camera.cpp  camera.h  character.h  cod_big_map_20x20-1.yaml  cod_big_map_20x20.yaml  field_of_view.cpp  field_of_view.h  map.yaml  map_aztec.yaml  map_view.cpp  map_view.h  sdl_bullet.cpp  sdl_bullet.h  sdl_camera.cpp  sdl_camera.h  sdl_gun.cpp  sdl_gun.h  sdl_item.cpp  sdl_item.h  sdl_knife_slash.cpp  sdl_knife_slash.h  sdl_map.cpp  sdl_map.h  sdl_player.cpp  sdl_player.h  sdl_tile.cpp  sdl_tile.h  sdl_world.cpp  sdl_world.h  sdl_world_item.cpp  sdl_world_item.h  tile_loader.h  tile_sheet.h
client/gui/pre_game_view/: CMakeLists.txt  list_skins.cpp  list_skins.h  list_teams.cpp  list_teams.h
client/gui/score_view/: CMakeLists.txt  score_display.cpp  score_display.h
client/gui/shop_view/: CMakeLists.txt  shop.cpp  shop.h
client/gui/window_elements/: CMakeLists.txt  SdlText.h  SdlWindow.cpp  SdlWindow.h  area.cpp  area.h  audio_manager.cpp  audio_manager.h  sdl_animation.cpp  sdl_animation.h  sdl_exception.cpp  sdl_exception.h  sdl_moving_animation.cpp  sdl_moving_animation.h  sdl_music.cpp  sdl_music.h  sdl_sound.cpp  sdl_sound.h  sdl_text.cpp  sdl_text.h  sdl_texture.cpp  sdl_texture.h  sdl_window.cpp  sdl_window.h
client/qt/: constants.h  create_game_window.cpp  create_game_window.h  game_list_table.cpp  game_list_table.h  game_menu_window.cpp  game_menu_window.h  lobby_window.cpp  lobby_window.h  log_in_window.cpp  log_in_window.h  resources.qrc
common/: CMakeLists.txt  base_socket.h  commands.h  deserializers.h  errors.h  game_state.cpp  game_state.h  game_state_update.h  gun_state.h  inventory_state.cpp  inventory_state.h  message.h  message_type_map.h  models.h  phase_state.h  player_state.h  protocol.cpp  protocol.h  queue.h  responses.h  serializers.h  socket.cpp  socket.h  state.h  thread.h  utility_state.h
common/game/: world_item.h
common/map/: box.h  floor.h  map.cpp  map.h  tile.h  (+1 more)
docs/: classes.md  documentacion_tecnica.md  manual_de_proyecto.md  manual_usuario.md  message_classes.md  protocol.md  server_architecture.md
editor/: CMakeLists.txt  editor_window.cpp  editor_window.h  main.cpp  map_view_tile.cpp  map_view_tile.h  resources.qrc  tile.h  tile_button.cpp  tile_button.h  tile_button_style.qss
gui/: CMakeLists.txt  main.cpp  sdl-window
gui/assets/gfx/: pointer.xcf
gui/hud/: hud_display.cpp  hud_display.h
gui/hud_component/: hud_display.cpp  hud_display.h
gui/window_elements/: Area.cpp  Area.h  Component.cpp  Component.h  SdlException.cpp  SdlException.h  SdlText.cpp  SdlText.h  SdlTexture.cpp  SdlTexture.h
maps/: construction.yaml  de_aim.yaml  dust.yaml  dust2.yaml  map.yaml
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  config.yaml  cons.h  errors.h  game.cpp  game.h  game_monitor.h  game_thread.cpp  game_thread.h  lobby_monitor.cpp  lobby_monitor.h  lobby_thread.cpp  lobby_thread.h  logic.h  main.cpp  pipe.h  player_message.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
tests/: CMakeLists.txt  foo.cpp
(+222 files in other folders)
